--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -2,7 +2,7 @@ name: RUN puppeteer
 
 on:
   push:
-    branches: [ main2 ]
+    branches: [ main ]
 
 jobs:
   job1:
@@ -12,12 +12,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: install command
-      run: npm i puppeteer mysql2 dotenv
+      run: npm i
 
     - name: RUN app.js
       env:
-        DATABASE100: ${{ secrets.DATABASE }}
-        HOST100: ${{ secrets.HOST }}
-        PASSWORD100: ${{ secrets.PASSWORD }}
-        USER100: ${{ secrets.USER }}
+        DATABASE: ${{ secrets.DATABASE }}
+        HOST: ${{ secrets.HOST }}
+        PASSWORD: ${{ secrets.PASSWORD }}
+        USER: ${{ secrets.USER }}
       run: node app.js
